learned how to watch to wait for async change to a data

--- a/basic/index.html
+++ b/basic/index.html
@@ -6,11 +6,10 @@
 
 <body>
   <div id="card">
-    <header>{{ title }}</span>
-    </header>
-    <form v-on:submit="addItem">
+    <header>{{ title }}</header>
+    <form v-on:submit.prevent="addItem">
       <input id="itemForm" v-model="input">
-      <button>Add Dinosaur</button>
+      <button v-bind:disabled="buttonDisabled">{{ buttonText }}</button>
     </form>
     <ul>
       <li v-for="item in items">
